--- a/app/views/home/furniture.html.erb
+++ b/app/views/home/furniture.html.erb
@@ -90,8 +90,8 @@
           <div class="row">
             <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center"
               data-aos="fade-up" data-aos-delay="100">
-              <h3>Voluptatem dignissimos provident</h3>
-              <p class="fst-italic">
+              <h3>The Action Dining Table</h3>
+              <p class="fst-italic fur">
                 We also put things on tables for a longer time, for example a TV, computer or decorations (pretty
                 things).
               </p>
@@ -104,7 +104,7 @@
               </ul>
             </div>
             <div class="col-lg-6 order-1 order-lg-2 text-center about-img" data-aos="fade-up" data-aos-delay="200">
-            <%= image_tag 'fur1.jpg' , class: "img-fluid" , alt: "" %>
+            <%= image_tag 'fur1.jpg' , class: "img-fluid im" , alt: "" %>
             </div>
           </div>
         </div><!-- End tab content item -->
@@ -112,8 +112,8 @@
         <div class="tab-pane" id="tab-2">
           <div class="row">
             <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center">
-              <h3>Neque exercitationem debitis</h3>
-              <p class="fst-italic">
+              <h3>A couch, also known as a sofa.</h3>
+              <p class="fst-italic fur">
                 Wikipedia differs from printed references in important ways. It is continually created and updated.
               </p>
               <ul>
@@ -126,7 +126,7 @@
               </ul>
             </div>
             <div class="col-lg-6 order-1 order-lg-2 text-center about-img">
-            <%= image_tag 'fur2.webp' , class: "img-fluid" , alt: "" %>
+            <%= image_tag 'fur2.webp' , class: "img-fluid im" , alt: "" %>
             </div>
           </div>
         </div><!-- End tab content item -->
@@ -134,7 +134,7 @@
         <div class="tab-pane" id="tab-3">
           <div class="row">
             <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center">
-              <h3>Voluptatibus commodi accusamu</h3>
+              <h3>Tables come in a wide variety of materials.</h3>
               <ul>
                 <li><i class="bi bi-check2-all"></i>Chairs were in existence since at least the Early Dynastic Period of
                   Egypt.</li>
@@ -143,7 +143,7 @@
                 <li><i class="bi bi-check2-all"></i> Chairs can be made from wood, metal, or other strong materials,
                   like stone or acrylic</li>
               </ul>
-              <p class="fst-italic">
+              <p class="fst-italic fur">
                 The earliest images of chairs in China are from 6th-century Buddhist murals and stele, but the practice
                 of sitting in chairs at that time was rare.
               </p>
@@ -157,8 +157,8 @@
         <div class="tab-pane" id="tab-4">
           <div class="row">
             <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center">
-              <h3>Omnis fugiat ea explicabo sunt</h3>
-              <p class="fst-italic">
+              <h3>A cabinet is a type of furniture with enclosed.</h3>
+              <p class="fst-italic fur">
                 A cabinet is a type of furniture with enclosed shelves and sometimes a door in front. It is usually made
                 of wood.
 
