--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -87,7 +87,7 @@
                 </div>
         </div>
         <div class="carousel-item" data-bs-interval="2000" >
-            <%= image_tag 'crr1.jpg' , class: "d-block w-100" , alt: "" %>
+            <%= image_tag 'crr1.jpg' , class: "d-block w-100 dia" , alt: ""  %>
             <div class="center carousel-caption d-none d-md-block">
                 <div class="carousel-inner">
                     <div class="container">
@@ -178,22 +178,9 @@
                             and
                             luxurious spaces.
                         </p>
-                        <ul>
-                            <li><i class="bx bx-check-double"></i> Our signature design process comes
-                                standardâ€¦refresh, remodel,
-                                new and enjoyable design experience.</li>
-                            <li><i class="bx bx-check-double"></i> Our signature design process comes standardâ€¦refresh
-                            </li>
-
-                        </ul>
+                        
                         <p>
-                            Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                            reprehenderit in
-                            voluptate
-                            velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                            proident, sunt
-                            in
-                            culpa qui officia deserunt mollit anim id est laborum
+                        The pursuit of effective use of space, user well-being and functional design has contributed to the development of the contemporary interior design profession. The profession of interior design is separate and distinct from the role of interior decorator.
                         </p>
                     </div>
 
@@ -564,10 +551,7 @@
                                     <li><i class="fa fa-check-circle-o"></i> Modern Hall Design</li>
                                 </ul>
                                 <p class="fst-italic" >
-                                    Ullamco laboris nisipclass ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                                    reprehenderit in
-                                    voluptate
-                                    velit esse cillum dolore eu fugiat nulla pariatur
+                                In ancient India, architects would also function as interior designers. This can be seen from the references of Vishwakarma the architect—one of the gods in Indian mythology.  
                                 </p>
                             </div>
                         </div>
@@ -594,10 +578,7 @@
                                     <li><i class="fa fa-check-circle-o"></i> Look at the Floor</li>
                                 </ul>
                                 <p class="fst-italic">
-                                    Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                                    reprehenderit in
-                                    voluptate
-                                    velit esse cillum dolore eu fugiat nulla pariatur
+                                In ancient India, architects would also function as interior designers. This can be seen from the references of Vishwakarma the architect—one of the gods in Indian mythology. 
                                 </p>
                             </div>
                         </div>
@@ -680,9 +661,7 @@
 
             <div class="section-title">
                 <h2>Some photos from <span>DESIGNS</span></h2>
-                <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque
-                    vitae
-                    autem.</p>
+                <p>The design work can be based on a customer's demand, a demand.   </p>
             </div>
 
             <div class="row g-0">
@@ -771,7 +750,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="member">
                         <div class="pic">
-                            <%= image_tag 'designer .jpg' , class: "img-fluid" , alt: "" %>
+                            <%= image_tag 'designer.jpg' , class: "img-fluid" , alt: "" %>
                         </div>
                         <div class="member-info">
                             <!-- <h4></h4>
