--- a/app/assets/stylesheets/furniture.css
+++ b/app/assets/stylesheets/furniture.css
@@ -96,6 +96,13 @@
   .about-img:hover img{
     transform: scale(1.1);
   }
+  .fur{
+    color: #444444 !important;
+  }
+  .im{
+    width: 600px;
+    height: 400px !important;
+  }
 
   /*--------------------------------------------------------------
 # Constructions Section
